--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -580,9 +580,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dif"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -603,8 +601,9 @@
     }
    ],
    "source": [
+    "dif=[]\n",
     "for i in range(1,len(s_series)):\n",
-    "    dif = s_series[i]-s_series[i-1]\n",
+    "    dif.append)s_series[i]-s_series[i-1]\n",
     "dif_noise = pd.Series(dif, index=days[1:])\n",
     "plt.plot(dif_noise);"
    ]
