Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -631,7 +631,7 @@
     "# create a series with the specified dates\n",
     "stocks =[1000]\n",
     "drift =8\n",
-    "for count, error in enumerate(noise):\n",
+    "for count, error in enumerate(dif_noise):\n",
     "    stocks.append(stocks[count]+error+drift)\n",
     "s_series = pd.Series(stocks, index = days)"
    ]
