Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -629,11 +629,11 @@
    "outputs": [],
    "source": [
     "# create a series with the specified dates\n",
-    "stocks =[1000]\n",
+    "stocks_d =[1000]\n",
     "drift =8\n",
     "for count, error in enumerate(dif_noise):\n",
-    "    stocks.append(stocks[count]+error+drift)\n",
-    "s_series = pd.Series(stocks, index = days)"
+    "    stocks_d.append(stocks[count]+error+drift)\n",
+    "sd_series = pd.Series(stocks, index = days)"
    ]
   },
   {
