Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -641,12 +641,11 @@
     }
    ],
    "source": [
-    "# create a series with the specified dates\n",
-    "stocks_d=[0]\n",
-    "for count, error in enumerate(dif_noise):\n",
-    "    stocks_d.append(stocks_d[count]+error+drift)\n",
-    "sd_series = pd.Series(stocks_d, index = days)\n",
-    "sd_series.plot();"
+    "dif_d=[]\n",
+    "for i in range(1,len(s_series)):\n",
+    "    dif_d.append(s_series[i]-s_series[i-1])\n",
+    "dif_noise = pd.Series(dif, index=days[1:])\n",
+    "plt.plot(dif_noise);"
    ]
   },
   {
