Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -643,8 +643,8 @@
    "source": [
     "dif_d=[]\n",
     "for i in range(1,len(s_series)):\n",
-    "    dif_d.append(s_series[i]-s_series[i-1]+drift)\n",
-    "difd_noise = pd.Series(dif_d, index=days[1:])\n",
+    "    dif_d.append(s_series[i]-s_series[i-1])\n",
+    "dif_noise = pd.Series(dif, index=days[1:])\n",
     "plt.plot(dif_noise);"
    ]
   },
